# template-rust-tui

./: Cargo.toml  README.md  package.json
.github/workflows/: release.yml  sync.yml  test.yml
.husky/: pre-commit
scripts/: syncVersion.ts
src/: app.rs  error.rs  events.rs  main.rs  tui.rs
src/ui/: mod.rs
