[package]
name = "template-rust-tui"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["Omni <team@omni.dev>"]
description = "Rust TUI template"
license = "Apache-2.0"
repository = "https://github.com/omnidotdev/template-rust-tui"
homepage = "https://template-rust-tui.omni.dev"
keywords = []
categories = ["command-line-utilities"]
readme = "README.md"

[[bin]]
name = "template-rust-tui"
path = "src/main.rs"

[dependencies]
ratatui = "0.30"
crossterm = "0.28"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
multiple_crate_versions = "allow"
cargo_common_metadata = "allow"

[dev-dependencies]
cargo-husky = { version = "1", default-features = false, features = ["precommit-hook", "run-cargo-fmt", "run-cargo-clippy", "run-cargo-test"] }
